Conversion of Contact entity beans to JPA.